# pytest-save-warnings

./: .envrc  .gitignore  .pre-commit-config.yaml  README.md  flake.nix  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: ci.yaml  release.yaml
src/pytest_save_warnings/: __init__.py  plugin.py
tests/: test_plugin.py
tests/examples/: test_output_format.py  test_warning_during_import_gets_captured.py
