[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling",
]

[project]
name = "pytest-save-warnings"
version = "0.0.1"
description = "Save warnings captured by pytest to a file."
readme = "README.md"
keywords = [
  "pytest",
  "warning",
]
license = {text = "MIT License"}
authors = [
  { name="ento" },
]
requires-python = ">=3.8"
classifiers = [
  "Framework :: Pytest",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "pytest>=3.8",
]
[project.urls]
Repository = "https://github.com/ento/pytest-save-warnings"
[project.entry-points.pytest11]
save_warnings = "pytest_save_warnings.plugin"

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[tool.pytest.ini_options]
pytester_example_dir = "tests/examples/"
norecursedirs = [
  ".devenv",
  ".eggs",
  ".tox",
  "examples",
]

[tool.pyright]
typeCheckingMode = "strict"
venvPath = ".devenv/state/"
venv = "venv"
