[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs",
  "hatchling",
]

[project]
name = "pytest-save-warnings"
description = "Save warnings captured by pytest to a file."
readme = "README.md"
keywords = [
  "pytest",
  "warning",
]
license = {text = "MIT License"}
authors = [
  { name="ento" },
]
requires-python = ">=3.8"
classifiers = [
  "Framework :: Pytest",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dynamic = [
  "version",
]
dependencies = [
  "pytest>=3.8",
]
[project.optional-dependencies]
dev = [
  "build<2,>=1.0.3",
  "pip-tools<8,>=7.3",
  "tox<5,>=4.11.4",
  "twine<5,>=4.0.2",
]
[project.urls]
Repository = "https://github.com/ento/pytest-save-warnings"
[project.entry-points.pytest11]
save_warnings = "pytest_save_warnings.plugin"

[tool.hatch.build.hooks.vcs]
version-file = "src/pytest_save_warnings/_version.py"

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[tool.hatch.version]
source = "vcs"
[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.pytest.ini_options]
pytester_example_dir = "tests/examples/"
norecursedirs = [
  ".devenv",
  ".direnv",
  ".eggs",
  ".tox",
  "examples",
]

[tool.pyright]
typeCheckingMode = "strict"
venvPath = ".devenv/state/"
venv = "venv"
